Got fades working between screens. Some alignment issues introduced, but it's time for 🍷  with my husband.

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -24,7 +24,7 @@ h1 {
     text-transform: uppercase;
     letter-spacing: 0.1em;
     display: block;
-    margin: 0;
+    margin: 0 auto;
     font-size: 1.5em;
     line-height: 1.3em;
     font-weight: 100;
@@ -35,6 +35,7 @@ p {
     line-height: 1.3em;
     max-width: 30em;
     margin: 5px;
+    text-align: center;
 }
 
 p.copyright {
@@ -52,7 +53,7 @@ p.copyright {
 hr {
     background: white;
     width: 50px;
-    margin: 20px;
+    margin: 20px auto;
     height: 1px;
     border: 0;
     box-shadow: 0 0 10px white;
@@ -60,15 +61,13 @@ hr {
 
 fieldset {
     border: 0;
-    text-align: center;
     display: flex;
     justify-content: center;
     flex-direction: column;
     align-items: center;
     margin: 30px;
-    text-align: center;
     p {
-        text-align: center;
+        font-size: 0.8em;
     }
 }
 
@@ -78,7 +77,6 @@ fieldset {
 }
 
 .selection p {
-    // font-size: 0.75em;
     line-height: 1.5em;
     text-transform: uppercase;
     letter-spacing: 0.1em;
@@ -153,6 +151,10 @@ input[type="submit"],
         background: rgba(255, 255, 255, 0.01);
         color: #fff;
     }
+    &:active {
+        background: #fff;
+        color: #333;
+    }
 }
 
 a {
@@ -182,6 +184,9 @@ label {
     margin: 0;
     font-size: 30px;
     cursor: pointer;
+    &:hover {
+        text-shadow: 0 0 25px;
+    }
 }
 
 .select {
@@ -190,8 +195,15 @@ label {
     justify-content: space-around;
 }
 
+// .firstPrompt,
+// .secondPrompt,
+// .thirdPrompt,
+// .lastInput,
+// .aura {
+//     display: none;
+// }
 section {
-    visibility: hidden;
+    display: none;
     position: absolute;
     left: 50%;
     top: 50%;
@@ -199,9 +211,7 @@ section {
     max-width: 80%;
 }
 
-.current {
-    opacity: 0;
-    visibility: visible;
+.container {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -230,10 +240,3 @@ section {
         margin-top: 20px;
     }
 }
-
-// @media (max-width: 375px) {
-//     body {
-//         font-weight: 300px;
-//         font-size: 16px;
-//     }
-// }
